--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
           <input type="submit" value="conectar con fb" />
         </form>
         <form> 
-         <p>ingresa tu usuario</p>
+         <p>ingresa tu usuario 1 </p>
          <input type="text" />   
          <P>INGRESATU CONTRASEÑA</P>
           <input type="password" />   
           <input type="submit" />
         </form>
     </body>
-</html>
+</html>s
