--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta charset=“UTF-8”>
+        <meta charset="UTF-8">
     </head>
     <body>
         <form> 
@@ -16,4 +16,4 @@
           <input type="submit" />
         </form>
     </body>
-</html>s
+</html>
